--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,12 @@ services:
     runtime: nvidia
     environment:
       - NVIDIA_VISIBLE_DEVICES=all
-      - MODEL_PATH=/models/mistral-7b-instruct-v0.2  # Using a specific model name
       - GPU_COUNT=2
     volumes:
       - ./models:/models
     ports:
       - "8000:8000"
+    command: ["python3", "-m", "vllm.entrypoints.openai.api_server", "--host", "0.0.0.0", "--port", "8000"]
     deploy:
       resources:
         reservations:
