--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,10 +15,11 @@ services:
     networks:
       - vllm-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/v1/models/info"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+      test: ["CMD", "python3", "-c", "import requests; requests.get('http://localhost:8000/v1/models')"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
   model-manager:
     build: ./model-manager
