--- a/vllm/Dockerfile
+++ b/vllm/Dockerfile
@@ -1,12 +1,13 @@
 FROM nvidia/cuda:12.1.0-devel-ubuntu22.04
 
 RUN apt-get update && apt-get install -y \
+    python3 \
     python3-pip \
-    python3-dev \
     && rm -rf /var/lib/apt/lists/*
 
-RUN pip3 install vllm
-RUN pip3 install fastapi uvicorn
+RUN pip3 install vllm requests
+
+EXPOSE 8000
 
 WORKDIR /app
 COPY entrypoint.sh .
