--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,27 +6,27 @@ services:
     runtime: nvidia
     environment:
       - NVIDIA_VISIBLE_DEVICES=all
-      - CUDA_VISIBLE_DEVICES=0,1
-      - NUM_SHARD=2
+      - MODEL_ID=TinyLlama/TinyLlama-1.1B-Chat-v1.0
+    command: ["--model-id", "TinyLlama/TinyLlama-1.1B-Chat-v1.0"]
     volumes:
-      - ./models:/models
+      - ./models:/data
     ports:
-      - "8082:8000"  # Changed from 8000:8000 to 8082:8000
+      - "8082:80"
     deploy:
       resources:
         reservations:
           devices:
             - driver: nvidia
-              count: 2
+              count: all
               capabilities: [gpu]
     networks:
       - tgi-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:80/health"]
       interval: 10s
       timeout: 5s
       retries: 5
-      start_period: 30s
+      start_period: 60s
 
   model-manager:
     build: ./model-manager
