--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,8 +33,19 @@ services:
     environment:
       - HF_TOKEN=${HF_TOKEN}
       - TGI_HOST=http://tgi:80
+    volumes:
+      - ./models:/models
+    ports:
+      - "8081:8081"
+    networks:
+      - tgi-network
+    depends_on:
+      tgi:
+        condition: service_healthy
+    restart: unless-stopped
 
   openwebui:
+    image: ghcr.io/open-webui/open-webui:main
     environment:
       - OPENAI_API_BASE=http://tgi:80/v1
       - OPENAI_API_KEY=not-needed
