--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,34 +7,24 @@ services:
     environment:
       - NVIDIA_VISIBLE_DEVICES=all
       - MODEL_ID=mistralai/Mistral-7B-Instruct-v0.2-fr
-    command: ["--model-id", "mistralai/Mistral-7B-Instruct-v0.2-fr", "--max-input-length", "2048", "--max-total-tokens", "4096"]
-    volumes:
-      - ./models:/data
+      - CORS_ALLOW_ORIGINS=*
+    command: [
+      "--model-id", "mistralai/Mistral-7B-Instruct-v0.2-fr",
+      "--max-input-length", "2048",
+      "--max-total-tokens", "4096",
+      "--cors-allow-origins", "*"
+    ]
     ports:
-      - "8081:80"  # TGI API and OpenAI endpoint
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: all
-              capabilities: [gpu]
-    networks:
-      - tgi-network
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:80/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 120s
+      - "8081:80"
 
   openwebui:
     image: ghcr.io/open-webui/open-webui:main
     environment:
-      - OPENAI_API_BASE=http://tgi:80/v1
+      - OPENAI_API_BASE=http://localhost:8081/v1
       - OPENAI_API_KEY=not-needed
-      - ENDPOINTS=http://tgi:80/v1
-      - DEFAULT_ENDPOINT=http://tgi:80/v1
+      - ENDPOINTS=http://localhost:8081/v1
+      - DEFAULT_ENDPOINT=http://localhost:8081/v1
+      - SERVER_HOST=0.0.0.0
     ports:
       - "8080:8080"  # OpenWebUI interface
     depends_on:
