--- a/model-manager/Dockerfile
+++ b/model-manager/Dockerfile
@@ -6,4 +6,4 @@ RUN pip install -r requirements.txt
 
 COPY app/ .
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8082"]
+CMD ["python", "main.py"]
